# terminal

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  vcpkg-configuration.json  vcpkg.json
app/: go.mod  go.sum  main.go
app/frontend/: index.html  package.json  vite.config.ts
app/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
app/frontend/src/components/: BrowserTabs.tsx  ProfilesTab.tsx  Settings.css  Settings.tsx  SettingsPrimitives.tsx  Terminal.tsx  TerminalTab.tsx  tabs.css  tabs.ts  types.ts
app/frontend/src/ipc/: client.ts  frame.ts  log.ts
include/: ipc.h  packet.h
include/linux/: prefs.h  pty.h
include/logger/: logger.h
include/mac/: clipboard.h  prefs.h  pty.h
include/win/: prefs.h  pty.h
resources/: Info.plist  entitlements.plist
resources/assets/: logo.icns
resources/product/: index.html
src/: ipc.cpp  main_linux.cpp  main_mac.mm  main_win.cpp  packet.cpp
src/linux/: prefs.cpp  pty.cpp
src/mac/: clipboard.mm  prefs.mm  pty.mm
src/win/: prefs.cpp  pty.cpp
ui/mac/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  MainWindowController.h  MainWindowController.m  PreferencesManager.h  PreferencesManager.m  PtyManager.h  PtyManager.m  TerminalWebView.h  TerminalWebView.m  WebViewFactory.h  WebViewFactory.m  main.m
utils/: format_icon.js  package.json
